# wgpuProject

./: .gitignore  AGENTS.md  Cargo.toml
src/: constants.rs  lib.rs  main.rs  platform.rs
src/app/: mod.rs
src/atom/: model.rs
src/physics/: electron.rs  elements.rs  mod.rs  nucleus.rs  particle.rs
src/renderer/: camera.rs  cloud.rs  mesh.rs  mod.rs  renderer.rs  vertex.rs
src/shaders/: cloud.wgsl  sphere.wgsl
src/simulation/: atom.rs  mod.rs  solver.rs
src/ui/: mod.rs
