[package]
name = "wgpu-triangle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "0.20", features = ["webgl"] }
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
glam = { version = "0.27", features = ["bytemuck"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"

# 웹 빌드용
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen-futures = "0.4.51"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "console",
    "OffscreenCanvas",
] }
